Add javafx dependency